--- a/client/public/src/er-shell/style/stylesheets/screen.css
+++ b/client/public/src/er-shell/style/stylesheets/screen.css
@@ -543,25 +543,28 @@ core-drawer-panel:not([narrow]) #navicon {
   width: 100%;
 }
 /* line 55, ../../../er-apps/PitchDial/main.scss */
+#pitch-dial paper-icon-button {
+  margin-top: -10px;
+  float: left;
+}
+/* line 60, ../../../er-apps/PitchDial/main.scss */
+#pitch-dial #scale {
+  float: left;
+}
+/* line 64, ../../../er-apps/PitchDial/main.scss */
 #pitch-dial button {
   width: 30%;
-  height: 7%;
   text-overflow: clip;
-  border: none;
-  border-bottom: solid;
-  border-width: 1px;
-  border-color: #eeeeee;
-  background-color: #ffffff;
 }
-/* line 66, ../../../er-apps/PitchDial/main.scss */
+/* line 70, ../../../er-apps/PitchDial/main.scss */
 #pitch-dial button:focus {
   outline: 0;
 }
-/* line 71, ../../../er-apps/PitchDial/main.scss */
+/* line 75, ../../../er-apps/PitchDial/main.scss */
 #pitch-dial button:hover {
   cursor: pointer;
 }
-/* line 75, ../../../er-apps/PitchDial/main.scss */
+/* line 79, ../../../er-apps/PitchDial/main.scss */
 #pitch-dial button:active {
   border-bottom: solid;
 }
